Some latest changes from Hotspot